--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,10 @@
 .App {
-  text-align: center;
+  color: #282c34;
+  width: 60%;
+  margin: auto;
 }
 
+/*
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -36,3 +39,4 @@
     transform: rotate(360deg);
   }
 }
+*/
